--- a/BEMedsains/package.json
+++ b/BEMedsains/package.json
@@ -2,7 +2,7 @@
   "name": "bemedsains",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -20,5 +20,8 @@
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.1"
   }
 }
