create signup admin

--- a/BE/package.json
+++ b/BE/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bemedsains",
+  "name": "be",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
