--- a/FE/package.json
+++ b/FE/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
