--- a/FE/.gitignore
+++ b/FE/.gitignore
@@ -6,13 +6,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-<<<<<<<< HEAD:FEMedsains/.gitignore
+.gitignore
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
 .env
 ========
->>>>>>>> 568f9094a1c8d46345a0e58f9934604d2d885d40:FE/.gitignore
+/FE/.gitignore
+
+
+
 
 node_modules
 dist
