--- a/BE/package.json
+++ b/BE/package.json
@@ -11,15 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
